--- a/index.html
+++ b/index.html
@@ -2002,6 +2002,15 @@ I am currently looking for PhD positions in Computer Graphics field to start in 
   <script src="/js/wowchemy-publication.68f8d7090562ca65fc6d3cb3f8f2d2cb.js" type="module"></script>
 
 
+  <iframe  style="position: fixed; width: 100%;
+                  max-width: 100% !important;
+                  height: 100vh;
+                  border: none;
+                  top: 0;
+                  z-index: -1000;" 
+            src="./webgl_bg.html">
+  </iframe>
+
 
 
 
