--- a/index.html
+++ b/index.html
@@ -912,6 +912,14 @@
 <div style="background-color:#f0995c;border-radius: 10px; padding: 20px 20px; text-align:justify; color: #16171d; ">
 I am currently looking for PhD positions in Computer Graphics field to start in Fall 2024. Please feel free to reach out with any opportunities you might know of!
 </div>
+  <iframe  style="position: fixed; width: 100%;
+                  max-width: 100% !important;
+                  height: 100vh;
+                  border: none;
+                  top: 0;
+                  z-index: -1000;" 
+            src="./webgl_bg.html">
+  </iframe>
 
     </div>
     
@@ -1036,7 +1044,7 @@ I am currently looking for PhD positions in Computer Graphics field to start in 
 
 
 <section id="projects" class="home-section wg-portfolio  "  >
- <div class="home-section-bg " >
+ <div class="home-section-bg " style="background-color: rgba(255,255,255,0.6)" >
    
  </div>
   <div class="container">
@@ -2001,15 +2009,6 @@ I am currently looking for PhD positions in Computer Graphics field to start in 
 
   <script src="/js/wowchemy-publication.68f8d7090562ca65fc6d3cb3f8f2d2cb.js" type="module"></script>
 
-
-  <iframe  style="position: fixed; width: 100%;
-                  max-width: 100% !important;
-                  height: 100vh;
-                  border: none;
-                  top: 0;
-                  z-index: -1000;" 
-            src="./webgl_bg.html">
-  </iframe>
 
 
 
