--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
 
 
 <section id="about" class="home-section wg-about-biography  "  >
- <div class="home-section-bg " style="background-color: rgba(255,255,255,0.6)" >
+ <div class="home-section-bg " >
    
  </div>
   <div class="container">
@@ -917,6 +917,7 @@ I am currently looking for PhD positions in Computer Graphics field to start in 
                   height: 100vh;
                   border: none;
                   top: 0;
+                  left: 0;
                   z-index: -1000;" 
             src="./webgl_bg.html">
   </iframe>
@@ -1044,7 +1045,7 @@ I am currently looking for PhD positions in Computer Graphics field to start in 
 
 
 <section id="projects" class="home-section wg-portfolio  "  >
- <div class="home-section-bg ">
+ <div class="home-section-bg " >
    
  </div>
   <div class="container">
