--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
 
 
 <section id="about" class="home-section wg-about-biography  "  >
- <div class="home-section-bg " >
+ <div class="home-section-bg " style="background: rgba(255, 255, 255, 0.7);">
    
  </div>
   <div class="container">
@@ -1790,7 +1790,8 @@ I am currently looking for PhD positions in Computer Graphics field to start in 
 
   </div>
 
-  <div class="page-footer">
+  <div class="page-footer" style="background: #fff;
+  z-index: 1;">
     
     
     <div class="container">
