--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
     
     <div class="article-style">
       <p>He is currently a Master&rsquo;s student in Computer Science at the University of Copenhagen, with keen interests in Computer Graphics, Physically-based Simulation, Visualization, and Parallel Computing. Feel free to explore the &lsquo;Projects&rsquo; section to review some of his work in Computer Graphics field.</p>
-<p>Before going on Master&rsquo;s journey, He accumulated 6 years of IT experience in China. He devoted over three years to web development as a front-end engineer and spent approximately another three years as a senior product manager.</p>
+<p>Before going on Master&rsquo;s journey, He accumulated 6 years of substantial IT experience in China. He devoted around 2 years to web development as a front-end engineer and spent approximately another 4 years as a senior product manager.</p>
 <div style="background-color:#f0995c;border-radius: 10px; padding: 20px 20px; text-align:justify; color: #16171d; ">
 I am currently looking for PhD positions to start in Fall 2024. Please feel free to reach out with any opportunities you might know of!
 </div>
@@ -1219,7 +1219,7 @@ I am currently looking for PhD positions to start in Fall 2024. Please feel free
   
     
   
-  <a class="btn btn-outline-primary btn-page-header" href="https://youtu.be/SpTOf699zDk" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary btn-page-header" href="https://youtu.be/YdwjBVKr40M" target="_blank" rel="noopener">
     <i class="fab fa-youtube mr-1"></i>video</a>
 
 
