--- a/project/soft-body-simulation/index.html
+++ b/project/soft-body-simulation/index.html
@@ -895,7 +895,7 @@
   
     
   
-  <a class="btn btn-outline-primary btn-page-header" href="https://youtu.be/SpTOf699zDk" target="_blank" rel="noopener">
+  <a class="btn btn-outline-primary btn-page-header" href="https://youtu.be/YdwjBVKr40M" target="_blank" rel="noopener">
     <i class="fab fa-youtube mr-1"></i>video</a>
 
 
